# realm

./: .gitignore  ARCHITECTURE_IMPORT_EXPORT.md  BACKLOG.md  CLAUDE.md  README.md  VISION.md  mkdocs.yml  plan.md  pyproject.toml
.claude/agents/: aresmush-reference.md  awakemud-reference.md  code-reviewer.md  coffeemud-reference.md  dikumud3-reference.md  evennia-reference.md  gomud-reference.md  implementation-guide.md  ldmud-reference.md  mud-developer-implementer.md  pennmush-reference.md  product-manager.md  reference-integrator.md  rhostmush-reference.md  smaug-reference.md  swfote-reference.md  swr-reference.md  tbamud-reference.md  tech-lead.md  tinymux-reference.md  vision-keeper.md
docs/: index.md
docs/api/: events.md  objects.md  sessions.md
realm/: __init__.py  cli.py
scripts/: build_scifi_pack.py  build_spacegame_area.py  build_wilderness_demo.py  gen_softcode_docs.py
tests/: __init__.py  test_area_reset.py  test_area_sync.py  test_attrflags_worldio.py  test_beats.py  test_behaviors.py  test_builder_tooling.py  test_builtin_commands.py  test_call.py  test_check_roll.py  test_combat.py  test_combat_encounters.py  test_commands.py  test_configurable_syntax.py  test_consent_security.py  test_data_driven_rules.py  test_death_events.py  test_dispatcher.py  test_disposition.py  test_economy.py  test_event_hooks.py  test_event_payload.py  test_events.py  test_fail_event.py  test_gateway_funnel.py  test_help_and_details.py  test_heredoc.py  test_identity_layer.py  test_infiltration.py  test_init_scaffold.py  test_instances.py  test_keyid.py  test_language.py  test_lock_enforcement.py  test_markup.py  test_move_to.py  test_multiroom.py  test_objects.py  test_olc.py  test_on_check.py  (+36 more)
(+480 files in other folders)
