[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realm"
version = "0.1.0"
description = "Real-time Event-Action Layered MUD framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "REALM Contributors" }
]
keywords = ["mud", "mush", "game", "framework", "multiplayer"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]
dependencies = [
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
postgres = [
    "asyncpg>=0.28",
]
websocket = [
    "aiohttp>=3.9",
]

[project.scripts]
realm = "realm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["realm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
